# dac_agent

./: .gitignore  README.md  README_Daisy_MVP.md  pyproject.toml  requirements.txt  tmp_find_pages.py  tmp_make_golden.py  tmp_make_golden_exact.py  tmp_scan.py  tmp_scan_pages.py
config/: rules.yaml
daisy_test_data/: 2025_11_11_Report_DAC_Template_Resource_MICROSOFT_OFFICE_365_All Entitlements.xlsx  2025_11_11_Report_DAC_Template_Resource_MICROSOFT_OFFICE_365_All my Application Roles.xlsx  2025_11_11_Report_DAC_Template_Resource_MICROSOFT_OFFICE_365_All my IT Roles without Application Role.xlsx  2025_11_11_Report_DAC_Template_Resource_MICROSOFT_OFFICE_365_All my Roles.xlsx  2025_11_11_Report_DAC_Template_Resource_MICROSOFT_OFFICE_365_Entitlement Services.xlsx  2025_11_11_Report_DAC_Template_Resource_MICROSOFT_OFFICE_365_Functional Area Matrix.xlsx  2025_11_11_Report_DAC_Template_Resource_MICROSOFT_OFFICE_365_IT Role Services.xlsx
out_debug/: extract_debug.json  review_result.json  review_result.md  run_summary.json
out_golden_build/: review_result.json  review_result.md
out_noocr/: review_result.json  review_result.md  run_summary.json
out_noocr2/: review_result.json  review_result.md  run_summary.json
out_noocr_partial/: review_result.json  review_result.md  run_summary.json
out_ocr/: review_result.json  review_result.md  run_summary.json
out_ocr2/: review_result.json  review_result.md  run_summary.json
out_ocr_partial/: extract_debug.json  review_result.json  review_result.md  run_summary.json
out_ocr_partial2/: review_result.json  review_result.md  (+1 more)
(+24 files in other folders)
