[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daisy"
version = "0.1.0"
description = "DAC review agent (no-UI) that validates DAC PDFs + evidence exports and emits structured results."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pymupdf>=1.23",
  "pdfplumber>=0.10",
  "pandas>=2.0",
  "openpyxl>=3.1",
]

[project.scripts]
daisy = "daisy.cli:main"
